# AI-Recruitment-Agency

./: agent_code.ipynb  main.py  pyproject.toml  test.py
src/: RAG.py  email_candidate.py  meeting_scheduler.py
